--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600;1,700&family=Maven+Pro&display=swap');
+
+:root{
+  --bg: #ebebeb;
+  --accent:#f06292;
+  --text:#555555;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html{
+  font-size:62.5%;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  color: var(--text);
+}
+
+a{
+  font-size: 1.2rem;
+}
+
+p{
+  font-size: 1.6rem;
+}
+
+a{
+  text-decoration: none;
+}
+
+h3{
+  font-family: 'Maven Pro', sans-serif;
+  font-weight: 400;
+  font-size: 3.2rem;
+}
+
+h2{
+  font-family: 'Bitter', serif;
+  color: var(--accent);
+  text-transform: uppercase;
+  font-size: 5.0rem;
+}
+
+.container{
+  background-color: var(--bg);
+}
+
+.homepage-header{
+  background-color: #ebebeb;
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 9%;
+  align-items: center;
+}
+
+.homepage-header img{
+  width: 15%;
+}
+
+.links{
+  display: flex;
+  justify-content: space-between;
+  /* border: 2px solid red; */
+  width: 30%;
+}
+
+.homepage-header a{
+  font-family: 'Bitter', serif;
+  font-weight: 700;
+  color:#555555;
+  text-transform: uppercase;
+}
+
+.homepage-jumbotron{
+  background: var(--bg);
+  height: 80vh;
+  padding: 0 4%;
+  display: flex;
+  /* flex-direction: row-reverse; */
+  justify-content: center;
+  justify-content: space-around;
+}
+
+
+.homepage-jumbotron div{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.homepage-jumbotron .text{
+  width: 40%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homepage-jumbotron h3{
+  padding: 0%;
+  margin: -20px 0;
+  line-height: 0%;
+}
+
+.homepage-jumbotron p{
+  margin: 0%;
+  padding: 0%;
+}
+
+.jumboimg{
+  transform: rotate(-4deg);
+  width: 32%;
+}
+
+.polaroid {
+  background: #fff;
+  padding: 1rem;
+  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.2);
+}
+
+.polaroid > img{
+  max-width: 100%;
+  height: auto;
 }
